@@ -86,14 +86,18 @@ let load_lambda ppf lam =
   let bytecode, closure = Meta.reify_bytecode code [| events |] None in
   match
     may_trace := true;
-    Fun.protect
-      ~finally:(fun () -> may_trace := false;
-                          if can_free then Meta.release_bytecode bytecode)
-      closure
+    closure ()
   with
-  | retval -> Result retval
+  | retval ->
+    may_trace := false;
+    if can_free then Meta.release_bytecode bytecode;
+
+    Result retval
   | exception x ->
+    may_trace := false;
     record_backtrace ();
+    if can_free then Meta.release_bytecode bytecode;
+
     toplevel_value_bindings := initial_bindings; (* PR#6211 *)
     Symtable.restore_state initial_symtable;
     Exception x
